# python-scraper

./: file.py  java.csv  jobs.csv  main.py  package-lock.json  ptractice.py  pyproject.toml  pytest.ini  python.csv
.github/: requirements.txt  test_web3.py  test_wework.py
extractors/: berlin.py  web3.py  wework.py
templates/: search.html
tests/: test_berlin.py  test_main.py
