[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "requests>=2.31.0",
    "cloudscraper>=1.2.71",
    "beautifulsoup4>=4.12.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1",
    "requests-mock>=1.11.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
]
